--- a/package.json
+++ b/package.json
@@ -1,35 +1,46 @@
 {
-  "name": "react-library",
-  "version": "0.1",
-  "description": "A library of React components, hooks, and other utilities that are used in RebelCode's projects",
+  "name": "sb-test",
+  "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/rebelcode/react-library",
-  "author": "RebelCode <dev@rebelcode.com>",
-  "license": "GPL-3.0",
-  "private": false,
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@babel/preset-react": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
     "@storybook/addon-links": "^6.4.22",
-    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.9",
     "@types/react": "^18.0.5",
     "babel-loader": "^8.2.4",
-    "css-loader": "^6.7.1",
+    "css-loader": "5.2.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "rollup": "^2.70.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.50.0",
-    "sass-loader": "^12.6.0",
-    "storybook-addon-sass-postcss": "^0.1.0",
-    "style-loader": "^3.3.1",
+    "sass-loader": "10.1.1",
+    "style-loader": "2.0.0",
     "typescript": "^4.6.3"
   },
-  "dependencies": {},
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "dependencies": {
+    "react-color": "^2.19.3",
+    "react-popper": "^1.3.7",
+    "react-select": "^4.3.0"
+  },
   "scripts": {
+    "build": "rollup -c",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   }
