--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
     "@storybook/addon-links": "^6.4.22",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.9",
     "@types/react": "^18.0.5",
     "babel-loader": "^8.2.4",
     "css-loader": "5.2.6",
+    "postcss": "^8.4.12",
+    "postcss-import": "^14.1.0",
+    "postcss-prefixer": "^2.1.3",
+    "postcss-preset-env": "^7.4.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rollup": "^2.70.2",
