--- a/package.json
+++ b/package.json
@@ -17,18 +17,28 @@
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.9",
     "@types/react": "^18.0.5",
+    "@types/react-color": "^3.0.6",
+    "@types/react-dom": "^18.0.1",
+    "@types/react-select": "^5.0.1",
+    "autoprefixer": "^9",
     "babel-loader": "^8.2.4",
     "css-loader": "5.2.6",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "cssnano": "^4.1.7",
+    "postcss": "^8.4.12",
+    "postcss-simple-vars": "^5.0.2",
+    "postcss-cli": "^9.1.0",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^6.4.3",
     "rollup": "^2.70.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-postcss-modules": "^2.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.50.0",
+    "sass": "^1.50.1",
     "sass-loader": "10.1.1",
     "style-loader": "2.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "@rollup/plugin-commonjs": "^21.1.0",
+    "rollup-plugin-replace": "^2.2.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -40,7 +50,7 @@
     "react-select": "^4.3.0"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "npx tsc  && rollup -c",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   }
