--- a/package.json
+++ b/package.json
@@ -5,40 +5,51 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.1.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.2",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
     "@storybook/addon-links": "^6.4.22",
+    "@storybook/addon-storyshots": "^6.4.22",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.9",
+    "@testing-library/react": "^13.1.1",
     "@types/react": "^18.0.5",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.1",
     "@types/react-select": "^5.0.1",
     "autoprefixer": "^9",
+    "babel-jest": "^28.0.3",
     "babel-loader": "^8.2.4",
     "css-loader": "5.2.6",
     "cssnano": "^4.1.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.0.3",
+    "jest-environment-jsdom": "^28.0.2",
     "postcss": "^8.4.12",
-    "postcss-simple-vars": "^5.0.2",
     "postcss-cli": "^9.1.0",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^6.4.3",
+    "postcss-simple-vars": "^5.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-test-renderer": "^18.1.0",
     "rollup": "^2.70.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss-modules": "^2.0.2",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.50.1",
     "sass-loader": "10.1.1",
     "style-loader": "2.0.0",
-    "typescript": "^4.6.3",
-    "@rollup/plugin-commonjs": "^21.1.0",
-    "rollup-plugin-replace": "^2.2.0"
+    "typescript": "^4.6.3"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -52,6 +63,8 @@
   "scripts": {
     "build": "npx tsc  && rollup -c",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch"
   }
 }
