Update ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "components",
     "declarations.d.ts",
     "*.ts",
-    "**/*.tsx",
+    "**/*.tsx", "icons",
   ],
   "exclude": [
       "node_modules",
